# StudyPilot

./: .gitignore  README.md
server/: .env.example  .env.production  Dockerfile.prod  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 41edb4274172_make_corrected_by_nullable.py  90f3a0c48806_add_constraints_indexes_views.py  a4cf3f83562f_add_status_to_manual_corrections.py
server/app/: main.py
server/app/core/: config.py  database.py  exceptions.py  limiter.py  logging.py  redis.py  security.py
server/app/llm/: __init__.py  cost_tracker.py  model_router.py
server/app/models/: __init__.py  base.py  error_book.py  knowledge.py  plan.py  qa.py  report.py  student_profile.py  subject.py  system.py  upload.py  user.py
server/app/schemas/: admin.py  auth.py  common.py  error_book.py  knowledge.py  parent.py  plan.py  qa.py  (+4 more)
server/config/: model_config.yaml
server/nginx/: nginx.conf
server/scripts/: start.sh
server/tests/: conftest.py  test_admin.py  test_admin_corrections_ext.py  test_admin_metrics.py  test_assessment_agent.py  test_auth.py  test_config.py  test_cost_tracker.py  test_error_book.py  test_extraction_agent.py  test_health.py  test_knowledge.py  test_model_router.py  test_models.py  test_parent.py  test_permissions.py  test_plan.py  test_qa.py  test_report.py  test_report_comparison.py  test_routing_agent.py  test_security.py  test_share.py  test_smoke.py  test_student_profile.py  test_tutoring_agent.py  test_upload.py  test_weekly_report_task.py
(+99 files in other folders)
