[project]
name = "studypilot-server"
version = "0.1.0"
description = "AI高考伴学教练 Backend API"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/models/*.py" = ["F821", "UP037"]  # cross-module forward refs for SQLAlchemy relationships

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
